# servicebooks-client

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: app.html
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: blocking.rs  config.rs  error.rs  main.rs  models.rs  util.rs
src/components/: ClaimSearch.svelte  Codes.svelte  DocumentUpload.svelte  Dropdown.svelte  ErrorPanel.svelte  FormFeild.svelte  NavButtons.svelte  Parts.svelte  TitleBar.svelte  Transition.svelte  WarrantyForm.svelte  displayObject.js  util.ts
src/components/WarrantyForm/: Codes.svelte  NavButtons.svelte  Parts.svelte  WarrantyForm.svelte  invoiceSchema.js
src/lib/: invoiceSchema.ts
src/routes/: +page copy.txt  +page.server.ts  +page.svelte
static/: login.html  pico.min.css
