[package]
name = "servicebooks-backend"
version = "0.1.0"
description = "Tauri backend for the ServiceBooks Client"
authors = ["exotik850"]
license = "MIT"
repository = "https://github.com/Exotik850/servicebooks-client"
default-run = "servicebooks-backend"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
quick-oxibooks = { path="../../quick-oxibooks", features= ["cache"] }
service-poxi = {path="../../service-poxi"}
chrono = "0.4.26"
tokio = {version = "1.29.1", features = ["macros"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
