[package]
name = "servicebooks-backend"
version = "0.1.2"
description = "Tauri backend for the ServiceBooks Client"
authors = ["exotik850"]
license = "MIT"
repository = "https://github.com/Exotik850/servicebooks-client"
default-run = "servicebooks-backend"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
tauri = { version = "1.4.1", features = [ "dialog-open", "updater", "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
quick-oxibooks = { path="../../quick-oxibooks", features= ["cache", "macros"] }
intuit-oxi-auth = { path = "../../quick-oxibooks/intuit-oxi-auth", features = ["async", "cache"] }
service-poxi = {path="../../service-poxi", features = ["log"] }
chrono = "0.4.28"
tokio = {version = "1.32.0", features = ["macros"] }
futures = "0.3.28"
pretty_env_logger = "0.5.0"
open = "5.0.0"
window-shadows = "0.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
